--- a/src/view/HomeView/index.scss
+++ b/src/view/HomeView/index.scss
@@ -1,3 +1,12 @@
 .home-view{
-    
+    display: flex;
+    gap: 10px;
+    height: 100%;
+    &-left{ 
+        width: 200px;
+        box-shadow: 1px 0px 1px 1px #ccc;
+    }
+    &-main{  
+        width: calc(100% - 210px);
+    }
 }
