--- a/src/view/HomeView/BpmnView/index.scss
+++ b/src/view/HomeView/BpmnView/index.scss
@@ -1,8 +1,20 @@
 .bpmn-view {
     width: 100%;
     height: 100%;
-    &-steps{
+
+    &-flow {
+        display: flex;
+        gap: 10px;
+        height: 100px;
+        >div {
+            flex: 1;
+            outline: solid 1px #ccc;
+        }
+    }
+
+    &-steps {
         display: flex;
         gap: 10px;
     }
+
 }
