--- a/src/view/HomeView/BpmnView/index.scss
+++ b/src/view/HomeView/BpmnView/index.scss
@@ -22,12 +22,71 @@
 
 }
 
-.user-views{
+.user-views {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    .user-view{
+
+    .user-view {
+        box-sizing: border-box;
+        border: solid 1px #ccc;
         width: calc(25% - 10px);
         height: 100px;
+        padding: 5px 0 0 0;
+        box-shadow: 1px 1px 1px 1px #000;
+
+        &-title {
+            border-bottom: dashed 1px #ccc;
+            height: 20px;
+            line-height: 20px;
+        }
+
+        &-main {
+            height: calc(100% - 20px);
+            overflow-y: auto;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 5px;
+
+            &-item {
+                width: 100%;
+                display: flex;
+                gap: 5px;
+                border-bottom: solid 1px #ccc;
+                margin-bottom: 5px;
+                padding-bottom: 5px;
+
+                >div:first-child {
+                    width: calc(60% - 5px);
+                    word-break: break-all;
+                    white-space: normal;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 2;
+                    -webkit-box-orient: vertical;
+                    line-height: 1rem;
+                    color: #6b9ed6;
+                    overflow: hidden;
+                }
+
+                &-operate {
+                    width: 40%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 5px;
+                    >div { 
+                        height: 20px;
+                        line-height: 20px;
+                        outline: solid 1px #ccc;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+
+        >div {
+            padding: 0 5px;
+        }
     }
 }
